# tree-sitter-vhdl

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Contributing.md  License.md  Makefile  Package.swift  Readme.md  binding.gyp  get_queries.sh  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  set_queries.sh  setup.py  test.sh  tree-sitter.json  update_bindings.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  fuzz.yml  publish.yml  regenerate.yml  release.yml
autogen/: core.py  gen_token_trie.py
autogen/ieee/: fixed_pkg.py  float_pkg.py  math_complex.py  math_real.py  numeric_std.py  std_logic_1164.py
autogen/libraries/ieee/: fixed_pkg.py  float_pkg.py  math_complex.py  math_real.py  numeric_std.py  std_logic_1164.py
autogen/libraries/std/: env.py  standard.py  textio.py
autogen/std/: env.py  standard.py  textio.py
benchmark/: bench.c  input_large.vhd  run.sh
bindings/c/: tree-sitter-vhdl.pc.in
bindings/c/tree_sitter/: tree-sitter-vhdl.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_vhdl/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
examples/: Screenshot.vhd
queries/: folds.scm  highlights.scm
queries/Helix/: highlights.scm
queries/Neovim/: context.scm  folds.scm  highlights.scm  injections.scm  textobjects.scm
src/: TokenTree.h  TokenTree.inc  TokenType.h  TokenType.inc  core.h  grammar.json  node-types.json  scanner.c  token_tree_match.inc
src/libraries/ieee/: fixed_pkg.h  (+5 more)
test/: conditional_expression.vhd  entity.vhd  temp.vhd
test/corpus/: architecture_basic.vhd  bit_values.vhd  comments.vhd  entity.vhd  if_generate.vhd  if_statement.vhd  library_constant_break.vhd  library_constant_debug_as_identifier.vhd  literals.vhd  prioritised_if.vhd  string_literal_std_logic.vhd  tool_directives.vhd  use_clause.vhd
test/highlight/: architecture_basic.vhd  bit_values.vhd  multiuse_keywords.vhd
(+9 files in other folders)
