[package]
name = "tree-sitter-vhdl"
description = "VHDL grammar for tree-sitter"
version = "0.0.1"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vhdl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/jpt13653903/tree-sitter-vhdl"
authors = ["John-Philip Taylor"]
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/Neovim/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
