[package]
name = "tree-sitter-vhdl"
description = "VHDL grammar for tree-sitter"
version = "1.3.1"
authors = ["John-Philip Taylor"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "vhdl"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/jpt13653903/tree-sitter-vhdl"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.9"
